added manifest and service worker

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <div id="root"></div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="Description" content="A react template app">
+        
+        <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png">
+
+        <title>React Template</title>
+    </head>
+    
+    <body>
+        <div id="root">
+            <noscript>
+                Looks like you have Javascript disabled.
+                Please enabled it to view this site.
+            </noscript>
+        </div>
+    </body>
 </html>
